k8s/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
